@@ -8,12 +8,6 @@ import java.util.EventListener;
 
 import javax.swing.event.EventListenerList;
 
-import edu.colorado.phet.acidbasesolutions.constants.ABSColors;
-import edu.colorado.phet.acidbasesolutions.constants.ABSConstants;
-import edu.colorado.phet.common.phetcommon.math.Function;
-import edu.colorado.phet.common.phetcommon.math.Function.LinearFunction;
-import edu.colorado.phet.common.phetcommon.view.util.ColorUtils;
-import edu.colorado.phet.common.phetcommon.view.util.VisibleColor;
 import edu.umd.cs.piccolo.util.PDimension;
 
 /**
@@ -31,14 +25,12 @@ public class PHPaper extends SolutionRepresentation {
     private Color dippedColor;
     private double dippedHeight;
     private final EventListenerList listeners;
-    private final PHColorStrategy colorStrategy;
 
     public PHPaper( AqueousSolution solution, Point2D location, boolean visible, PDimension size, Beaker beaker ) {
         super( solution, location, visible );
         this.size = new PDimension( size );
         this.beaker = beaker;
         this.listeners = new EventListenerList();
-        this.colorStrategy = new CustomColorStrategy();
         this.dippedHeight = getSubmergedHeight();
         this.dippedColor = createColor( solution.getPH() );
         
@@ -149,7 +141,7 @@ public class PHPaper extends SolutionRepresentation {
      * @return
      */
     public Color createColor( double pH ) {
-        return colorStrategy.createColor( pH );
+        return PHColorFactory.createColor( pH );
     }
     
     private void setDippedHeight( double dippedHeight ) {
@@ -206,68 +198,6 @@ public class PHPaper extends SolutionRepresentation {
     private void fireDippedHeightChanged() {
         for ( PHPaperChangeListener listener : listeners.getListeners( PHPaperChangeListener.class ) ) {
             listener.dippedHeightChanged();
-        }
-    }
-    
-    private interface PHColorStrategy {
-        public Color createColor( double pH );
-    }
-    
-    /*
-     * Maps a pH value to a color in the visible light spectrum.
-     * We use visible wavelength as an intermediate representation,
-     * then map the wavelength to a color using VisibleColor from phetcommon.
-     */
-    private static class VisibleSpectrumStrategy implements PHColorStrategy {
-        
-        private static final LinearFunction MAPPING_FUNCTION = new Function.LinearFunction( ABSConstants.MIN_PH, ABSConstants.MAX_PH, VisibleColor.MAX_WAVELENGTH, VisibleColor.MIN_WAVELENGTH );
-        
-        public Color createColor( double pH ) {
-            double wavelength = MAPPING_FUNCTION.evaluate( pH );
-            return new VisibleColor( wavelength ); 
-        }
-    }
-    
-    /*
-     * Maps a pH value to a color, using a set of custom colors and interpolation.
-     * Custom colors are provided for each integer pH value.
-     * For an actual pH value, we select the 2 closest colors, then interpolate between them.
-     * The interpolating is a linear interpolation of individual RGB components.
-     */
-    private static class CustomColorStrategy implements PHColorStrategy {
-        
-        // colors as shown in acid-base-solutions/doc/pH-colors.png
-        protected static final Color[] COLORS = { 
-            ABSColors.PH_0,
-            ABSColors.PH_1,
-            ABSColors.PH_2,
-            ABSColors.PH_3,
-            ABSColors.PH_4,
-            ABSColors.PH_5,
-            ABSColors.PH_6,
-            ABSColors.PH_7,
-            ABSColors.PH_8,
-            ABSColors.PH_9,
-            ABSColors.PH_10,
-            ABSColors.PH_11,
-            ABSColors.PH_12,
-            ABSColors.PH_13,
-            ABSColors.PH_14,
-        };
-        
-        public Color createColor( double pH ) {
-            assert( COLORS.length == ( ABSConstants.MAX_PH - ABSConstants.MIN_PH + 1 ) );
-            Color color = null;
-            int lowerPH = (int)pH;
-            int upperPH = Math.round( (float)pH );
-            if ( lowerPH == upperPH ) {
-                color = COLORS[ lowerPH ];
-            }
-            else {
-                double distance = ( pH - lowerPH ) / ( upperPH - lowerPH );
-                color = ColorUtils.interpolateRBGA( COLORS[lowerPH], COLORS[upperPH], distance );
-            }
-            return color;
         }
     }
 }
