@@ -1,4 +1,7 @@
+8/8/10 decided on a color key (delete ContinousColorKeyNode, rename DiscreteColorKeyNode to PHColorKeyNode)
+8/8/10 change pH color from strategy pattern to factory pattern
 8/8/10 add pH paper to Custom Solution tab
+8/8/10 remove color animation from PHPaper
 8/8/10 make SolutionRepresentation handle notification of concentration and strength changes
 8/9/10 use pH=7 for color of undipped pH paper
 8/9/10 reduce pH paper width by half (60 to 30)
